{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 508,
  "lineage": "45a090d9-ce06-19f9-ae61-bcc202143668",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:734133008668:internet-gateway/igw-0268921eb33804bc6",
            "id": "igw-0268921eb33804bc6",
            "owner_id": "734133008668",
            "vpc_id": "vpc-098d549e861ba2ee4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:734133008668:route-table/rtb-03da6ef48ec176d2a",
            "id": "rtb-03da6ef48ec176d2a",
            "owner_id": "734133008668",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-098d549e861ba2ee4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:734133008668:route-table/rtb-041eb924af4c9d17a",
            "id": "rtb-041eb924af4c9d17a",
            "owner_id": "734133008668",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0268921eb33804bc6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-098d549e861ba2ee4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f0d8687bb75cbeb",
            "route_table_id": "rtb-03da6ef48ec176d2a",
            "subnet_id": "subnet-01aca6ed143730f3a"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04aeb304b0b149c2b",
            "route_table_id": "rtb-041eb924af4c9d17a",
            "subnet_id": "subnet-0841114a21c1efd21"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:734133008668:subnet/subnet-01aca6ed143730f3a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01aca6ed143730f3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "734133008668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-private"
            },
            "tags_all": {
              "Name": "udacity-private"
            },
            "vpc_id": "vpc-098d549e861ba2ee4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:734133008668:subnet/subnet-0841114a21c1efd21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0841114a21c1efd21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "734133008668",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-public"
            },
            "tags_all": {
              "Name": "udacity-public"
            },
            "vpc_id": "vpc-098d549e861ba2ee4"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:734133008668:vpc/vpc-098d549e861ba2ee4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c8f9254a0ad04125",
            "default_route_table_id": "rtb-01b6187d8c44184d9",
            "default_security_group_id": "sg-0acb7d6c7bd2e20dc",
            "dhcp_options_id": "dopt-0f390eb3c9d2d4ab1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-098d549e861ba2ee4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01b6187d8c44184d9",
            "owner_id": "734133008668",
            "tags": {
              "Name": "udacity"
            },
            "tags_all": {
              "Name": "udacity"
            }
          }
        }
      ]
    }
  ]
}